book/tests/snapshots/snapshot__@syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive total_distance = sum distance\n"
input_file: book/tests/prql/syntax-7.prql
---
Error:
   ╭─[:2:29]
   │
 2 │ derive total_distance = sum distance
   ·                             ────┬───
   ·                                 ╰───── Unknown name distance
───╯

